src/objects/AcctTeamAppCustomSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains AccountTeamApproval field Ids</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Profile_Id__c</fullName>
        <label>Admin Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subtype__c</fullName>
        <label>Case Subtype</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Approval__c</fullName>
        <label>RecordType_Approval</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Removal__c</fullName>
        <label>RecordType_Removal</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <label>Team Member</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_lkid__c</fullName>
        <label>Team Member_lkid</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editUrl__c</fullName>
        <label>editUrl</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AcctTeamAppCustomSettings</label>
</CustomObject>